<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/title_box"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/select_mulch_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/mulch_type"
            android:textSize="32sp"
            />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/typeGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_box">

        <RadioButton
            android:id="@+id/premium_bark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premium_bark" />

        <RadioButton
            android:id="@+id/special"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/special"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/premium_bark" />

        <RadioButton
            android:id="@+id/triple_ground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triple_ground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/special" />

        <RadioButton
            android:id="@+id/chocolate_dyed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate_dyed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/triple_ground" />

        <RadioButton
            android:id="@+id/red_dyed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_dyed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chocolate_dyed" />

        <RadioButton
            android:id="@+id/black_dyed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black_dyed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/red_dyed"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/play_mat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_mat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/black_dyed" />

        <RadioButton
            android:id="@+id/cedar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cedar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/play_mat"
            tools:ignore="HardcodedText" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="68sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>